@@ -302,6 +302,8 @@ TF_OPTIONSMENU_MACHINETRANSLATE=Mac&hine Translate
 
 TF_OPTIONSMENU_GLOSSARY=&Glossary
 TF_OPTIONSMENU_GLOSSARY_TBX_DISPLAY_CONTEXT=&Display Context Description for TBX Glossaries
+TF_OPTIONSMENU_GLOSSARY_EXACT_MATCH=&Use terms appearing separately in the source text
+TF_OPTIONSMENU_GLOSSARY_STEMMING=Use stemming for &glossary entries
 
 TF_OPTIONSMENU_TRANSTIPS=Tra&nsTips
 
